--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
 ---
-layout: default
+layout: list
 title: weiwei blog
 ---
-
-
-<h2>{{ page.title }}</h2>
-<p>最新文章</p>
-<ul>
-{% for post in site.posts %}
-<li>{{ post.date }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-{% endfor %}
-</ul>
-
